--- a/contact.html
+++ b/contact.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Contact</title>
+    <title>Contact</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
+    <title>Updated Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./assets/reset.css">
-	<link rel="stylesheet" type="text/css" href="./assets/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
     <link rel="stylesheet" type="text/javascript" href=".//assets/app.js">
 </head>
+
 <body>
- <div class="container">
-                        <hr class="top-heavy">
-                    <section id="contact">
-                        <h2 class="top">Contact</h2>
-                        <hr class="heavy">
-                        <form action="">
-                        <fieldset>
-                            <legend></legend>
-                            <label for="name">Name</label>
-                            <br>
-                            <input type="text" id="name" name="fullname" placeholder="John Smith">
-                            <br>
-                            <label for="email">Email</label>
-                            <br>
-                            <input type="email" id="email" name="fullemail" placeholder="example@gmail.com" required>
-                            <br>
-                            <label for="message">Message</label>
-                            <br>
-                            <input type="textarea" id="message">
-                            <br>
-                            <input type="submit">
-                        </fieldset>	
-                        </form>
-                    </section>
-                    <div class="dropdown">
-                            <a class="btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              LEARN MORE
-                            </a>
-                          
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                              <a class="dropdown-item" href="index.html">Home</a>
-                              <a class="dropdown-item" href="portfolio.html">Projects</a>
-                              <a class="dropdown-item" href="contact.html">Get In Touch</a>
-                            </div>
-                </div>
-                <footer>&copy; Copyright 2019</footer>
+    <div class="container">
+        <hr class="top-heavy">
+        <section id="contact">
+            <h2 class="top">Contact</h2>
+            <hr class="heavy">
+            <form action="">
+                <fieldset>
+                    <legend></legend>
+                    <label for="name">Name</label>
+                    <br>
+                    <input type="text" id="name" name="fullname" placeholder="John Smith">
+                    <br>
+                    <label for="email">Email</label>
+                    <br>
+                    <input type="email" id="email" name="fullemail" placeholder="example@gmail.com" required>
+                    <br>
+                    <label for="message">Message</label>
+                    <br>
+                    <input type="textarea" id="message">
+                    <br>
+                    <input type="submit">
+                </fieldset>
+            </form>
+        </section>
+        <div class="dropdown">
+            <a class="btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                LEARN MORE
+            </a>
+
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="index.html">Home</a>
+                <a class="dropdown-item" href="portfolio.html">Projects</a>
+
+            </div>
+        </div>
+        <footer>&copy; Copyright 2019</footer>
 </body>
+
 </html>
