--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div class="container">
 
-    <h1 class="main">Hi, Im Jesus, I'm a student at KU. Im learning how to be a coder.</h1>
+    <h1 class="main">Hi, Im Jesus, I'm a student at KU. Im learning how to code.</h1>
 
     <div class="dropdown">
       <a class="btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
@@ -37,8 +37,8 @@
 
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 
-        <a class="dropdown-item" href="portfolio.html">Projects</a>
-        <a class="dropdown-item" href="contact.html">Get In Touch</a>
+        <a class="dropdown-item" href="portfolio.html">PROJECTS</a>
+        <a class="dropdown-item" href="contact.html">CONTACT</a>
       </div>
     </div>
 
