--- a/portfolio.html
+++ b/portfolio.html
@@ -122,7 +122,7 @@
                     <img class="switch-image"src="images\newproject-one.png" alt="Chicago">
                     <div class="carousel-caption">
                         <h4><a href="https://jdrenteria.github.io/project-one/"style="background-color:#6969698e; color:white">My Craving!!</a></h4>
-                      <p style="background-color:#6969698e">Hungry & Indecisive? Try This App To Help You Satisfy Your Craving!</p>
+                      <p style="background-color:#6969698e; color:white; width:600px;margin-left:271px;">Hungry & Indecisive? Try This App To Help You Satisfy Your Craving!</p>
                     </div>
                   </div>
                 </div>
