added new contact template, as well as fixed css bugs

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <h1 class="main">Hi, Im Jesus, I'm a student at KU. Im learning how to code.</h1>
 
-    <div class="dropdown">
+    <div class="dropdown-index">
       <a class="btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
         aria-expanded="false">
         LEARN MORE
