--- a/portfolio.html
+++ b/portfolio.html
@@ -138,10 +138,10 @@
                 </a>
         
             </div>
-            <div class="dropdown">
+            <div class="dropdown-portfolio">
                 <a class="btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
-                    INTERESTED?
+                    LIKE WHAT YOU SEE?
                 </a>
     
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
