--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </a>
 
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-
+        <a class="dropdown-item" href="about.html">ABOUT</a>
         <a class="dropdown-item" href="portfolio.html">PROJECTS</a>
         <a class="dropdown-item" href="contact.html">CONTACT</a>
       </div>
