--- a/contact.html
+++ b/contact.html
@@ -88,8 +88,8 @@
           <div class="row text-center padding">
             <div class="col-12">
               <h2 style="margin-top: 2px;">CONNECT WITH ME </h2>
-              <a style="font-size: 20px;" href="https://www.linkedin.com/in/jesus-renteria-368259146/">LinkedIn<i class="fa fa-github" style="font-size:60px"></i></i></a>
-              <a style="font-size: 20px;" href="https://github.com/jdrenteria">GitHub<i class="fab fa-github"></i></a>
+              <a style="font-size: 20px;" href="https://www.linkedin.com/in/jesus-renteria-368259146/">LinkedIn,<i class="fa fa-github" style="font-size:60px"></i></i></a>
+              <a style="font-size: 20px;" href="https://github.com/jdrenteria">GitHub,<i class="fab fa-github"></i></a>
               
               <a style="font-size: 20px;" href="./images/My-Resume-00.pdf" alt="My resume" download="JR_Resume.pdf">Resume<i class="fa fa-file"
                   aria-hidden="true"></i></a>
