--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
         <div class="carousel-caption">
           <h4><a href="https://jdrenteria.github.io/project-one/" style="background-color:#6969698e; color:white">My
               Craving!!</a></h4>
-          <p id="craving-p">Hungry & Indecisive? Try
+          <p class="craving-paragraph" id="craving-p">Hungry & Indecisive? Try
             This App To Help You Satisfy Your Craving!</p>
         </div>
       </div>
