added correct resume pdf file

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
               <a style="font-size: 20px;" href="https://www.linkedin.com/in/jesus-renteria-368259146/">LinkedIn,<i class="fa fa-github" style="font-size:60px"></i></i></a>
               <a style="font-size: 20px;" href="https://github.com/jdrenteria">GitHub,<i class="fab fa-github"></i></a>
               
-              <a style="font-size: 20px;" href="./images/My-Resume-00.pdf" alt="My resume" download="JR_Resume.pdf">Resume<i class="fa fa-file"
+              <a style="font-size: 20px;" href="./images/Jdrenteria-Resume.pdf" alt="My resume" download="JR_Resume.pdf">Resume<i class="fa fa-file"
                   aria-hidden="true"></i></a>
               <P style="color:black">PHONE:913-XXX-XXXX</P>
               <P style="color: black">jesusrenteria48@gmail.com</P>
