added new projext to carousel, as well as image and styling

--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" type="text/css" href="./assets/reset.css">
   <link rel="stylesheet" type="text/css" href="./assets/style.css">
   <link rel="stylesheet" type="text/javascript" href=".//assets/app.js">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--===============================================================================================-->
@@ -85,8 +86,14 @@
               Send
             </span>
           </button>
+
         </div>
       </form>
+      <div class=link-logos>
+        <button style="font-size:24px">Git-Hub <i class="fa fa-github"></i></button>
+        <button style="font-size:24px">LinkIn <i class="fa fa-linkedin"></i></button>
+        <button style="font-size:24px">G-Mail<i class="fa fa-google"></i></button>
+      </div>
       <div class="dropdown-contact">
         <a class="btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false">
