added nintendo clicky game on portfolio as well as image for background

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,8 +69,16 @@
       <div class="item" data-interval="3000">
         <img class="switch-image" src="images\Japan-wallpaper-38.jpg" alt="Chicago">
         <div class="carousel-caption">
-          <h4><a href=" https://jdrenteria.github.io/Train-Arrival/" style="color:white">Hayai Japan Trains!!</a></h4>
+          <h4><a href=" https://jdrenteria.github.io/Train-Arrival/" style="color:white">Nintendo Clicky Game!!</a></h4>
           <p>Find Out When The Next Train Is Coming With This App!</p>
+        </div>
+      </div>
+
+      <div class="item" data-interval="3000">
+        <img class="switch-image" src="images/background.jpg" alt="Chicago">
+        <div class="carousel-caption">
+          <h4><a href="https://github.com/jdrenteria/clicky-game" style="color:white">Hayai Japan Trains!!</a></h4>
+          <p>Enjoy This Fun Nintendo Themed Memory Game!</p>
         </div>
       </div>
 
